# robot_worlds

./: .gitmodules  CMakeLists.txt  README.md  dependencies.repos  notes.md  package.xml
docker/: README.md  attach.sh  base.Dockerfile  base_ros2_gazebo.Dockerfile  build_docker.sh  entrypoint.sh  harmonic_humble.Dockerfile  run_docker.sh  worlds_overlay.Dockerfile
launch/: spawn_tb3.launch.py  tb3_house.launch.py  tb3_manipulator_base.launch.py  tb3_manipulator_world.launch.py  tb3_om_gz_moveit.launch.py  tb3_om_rviz_moveit.launch.py  tb3_robot_state_publisher.launch.py  tb3_world.launch.py
rviz/: tb3_house.rviz  tb3_manipulation_world.rviz  tb3_world.rviz
worlds/hospital/: unzip_models.sh
