<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_worlds</name>
  <version>0.0.0</version>
  <description>ROS Gazebo Worlds: Collection of various gazebo environments with different robots</description>
  <maintainer email="anujoy.chakraborty.de@gmail.com">nemo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <depend>gazebo_ros2_control</depend> -->

  <depend>gazebo_ros_pkgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/*/models"/>
  </export>
</package>
